# lfp_scroller

./: .gitignore  Readme.rst  kumar_vis.py  launch_scroller.py  pyproject.toml  setup.cfg  setup.py  tone_evoked_demo.py
.github/workflows/: check_install.yml
docs/: Readme.md  data_initialization.md  scroller_usage.md
fast_scroller/: __init__.py  curve_collections.py  data_files.py  filtering.py  h5data.py  h5scroller.py  helpers.py  loading.py  new_scroller.py  uicore.py
fast_scroller/legacy_scroller/: __init__.py  channel_picker.py  data_scroll.py  gui_tools.py
fast_scroller/modules/: __init__.py  animation.py  band_power_map.py  base.py  frame_filters.py  hfo_finder.py  interval_plot.py  navigators.py  plot_types.py  series_filters.py  sonify.py  sorting_viewer.py  spatial_extra.py  spatial_field.py  spectra.py  spectrogram.py  time_stamps.py
fast_scroller/pyqtgraph_extended/: __init__.py
fast_scroller/pyqtgraph_extended/opengl/: __init__.py
fast_scroller/pyqtgraph_extensions/: AlignedPlotItem.py  AxisItem.py  GraphicsLayout.py  __init__.py  functions.py  misc.py  offcuts.py
fast_scroller/pyqtgraph_extensions/opengl/: __init__.py
mlab_blackrock_code/: conv_NSx_to_H5.m  save_h5_struct.m
mlab_load_h5/: load_h5_struct.m  wrap_h5_file.m
