[build-system]
# For each Python version, build against the oldest numpy C_API_VERSION for
# which binary numpy wheels exist, and then the newest version of numpy
# implementing that C_API_VERSION.
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"


# Tell cibuildwheel to skip all pypy versions, and python 3.10 for macos (currently broken)
[tool.cibuildwheel]

skip = ["pp*", "cp310-macos*"]
