[metadata]
name = lfp_scroller
version = 0.1.0
author = mike t
author_email = mtrumpis@gmail.com
license = BSD 3-Clause
license_file = LICENSE
url = https://github.com/miketrumpis/lfp_scroller
description = Multichannel ephys viewer based on pyqtgraph and HDF5
edit_on_github = False
github_project = miketrumpis/lfp_scroller

[options]
packages = find:
python_requires = >=3.7
install_requires =
    h5py>=3.3.0
    matplotlib
    nitime
    numpy>=1.18.0
    pyface>=7.0.0
    # colorbaritem orientation fix in 0.12.2
    pyqtgraph>=0.12.2
    QtPy
    scipy
    spikeiterface>=0.90.0
    tqdm
    traits>=6.0.0
    traitsui>=7.0.0
    # Plus extra deps to be installed from source
    ecogdata @ git+https://github.com/miketrumpis/ecogdata.git
    ecoglib @ git+https://github.com/miketrumpis/ecoglib.git


[options.extras_require]

pyqt =
    PyQt5>=5.13.0

pyside2 =
    PySide2>=5.13.0
